feat: implement i18n for plans and features
BREAKING CHANGE: changed configuration schema
